added jhowk Base64 class and using it in utilsCrypt sun.misc.BASE64 classes throw warnings in maven